--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                 </div>
                 <div class="col direita">
-                    <h3>ME ESPECIALIZO EM CRIAR PROJETOS DE WEB DESING</h3>
+                    <h3>ME ESPECIALIZO EM CRIAR PROJETOS DE WEB DESIGN</h3>
                     <p>Sou uma estudante do 2°ano de Análise e Desenvolvimento de Sistemas, em busca de uma oportunidade 
                         na área de t.i </p>
                     <div class="botons">
